feat: master edit (#6)
