# backend/src/go/model_account_master.go
@@ -1,0 +1,16 @@
+/*
+ * K2-BackEnd API
+ *
+ * K2のバックエンドAPI
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type AccountMaster struct {
+
+	AccountEn string `json:"account_en"`
+
+	AccountJp string `json:"account_jp"`
+}
