# backend/src/go/model_param_master.go
@@ -1,0 +1,23 @@
+/*
+ * K2-BackEnd API
+ *
+ * K2のバックエンドAPI
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type ParamMaster struct {
+	Category string `json:"category"`
+
+	Key string `json:"key"`
+
+	ParamName string `json:"paramName,omitempty"`
+
+	Value string `json:"value,omitempty"`
+}
+
+type ParamMasterBody struct {
+	ParamData []ParamMaster `json:"paramData,omitempty"`
+}
